tests/snapshots/tui__interfaces_screen_lists_interfaces.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 44, 7)"
---
"org.busx.Test /org/busx/Test                "
"┌Interfaces────────────────────────────────┐"
"│org.busx.Test                             │"
"│                                          │"
"│                                          │"
"└──────────────────────────────────────────┘"
"↑↓ select · Enter open · Esc back · q quit ·"
