tests/snapshots/tui__listen_action_flows_interface_to_streaming_result.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"org.busx.Test > Result                  "
"┌listen org.busx.Test.Changed──────────┐"
"│signal  sender=:1.1                   │"
"│  …block1                             │"
"│                                      │"
"│signal  sender=:1.2                   │"
"│  …block2                             │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc bac"
