tests/snapshots/tui__listen_refused_renders_error_on_result.snap
---
source: tests/tui.rs
assertion_line: 1542
expression: "render_to_string(&state, 44, 6)"
---
"listen org.busx.Test.Ping                   "
"┌listen org.busx.Test.Ping─────────────────┐"
"│error: BecomeMonitor refused: ...         │"
"│                                          │"
"└──────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · Esc back/stop · q qu"
