tests/snapshots/tui__listen_result_renders_streaming_messages.snap
---
source: tests/tui.rs
assertion_line: 1370
expression: "render_to_string(&state, 52, 10)"
---
"listen i.Changed                                    "
"┌listen i.Changed──────────────────────────────────┐"
"│signal  sender=:1.1                               │"
"│  interface=i  member=Changed  serial=7           │"
"│  3                                               │"
"│signal  sender=:1.1                               │"
"│  interface=i  member=Changed  serial=9           │"
"│  4                                               │"
"└──────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · Esc back/stop · q quit      "
