tests/snapshots/tui__loop_loads_services_then_navigates.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"                                            "
"┌Services──────────────────────────────────┐"
"│org.busx.A                           111  │"
"│org.busx.B                                │"
"│                                          │"
"│                                          │"
"└──────────────────────────────────────────┘"
"↑↓ select · Enter open · q quit · ? help    "
