tests/snapshots/tui__objects_screen_renders_flat_paths.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 48, 9)"
---
"org.busx.Test                                   "
"┌Objects───────────────────────────────────────┐"
"│/                                             │"
"│/org                                          │"
"│/org/busx                                     │"
"│/foo                                          │"
"│                                              │"
"└──────────────────────────────────────────────┘"
"↑↓ select · Enter open · Esc back · q quit      "
