tests/snapshots/tui__objects_screen_renders_tree.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 48, 9)"
---
"org.busx.Test                                   "
"┌Objects───────────────────────────────────────┐"
"│▶ org                                         │"
"│  foo                                         │"
"│                                              │"
"│                                              │"
"│                                              │"
"└──────────────────────────────────────────────┘"
"↑↓/→← navigate · Enter open · Esc back · q quit "
