tests/snapshots/tui__service_screen_down_arrow_moves_selection.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 7)"
---
"                                        "
"┌Services──────────────────────────────┐"
"│a                                     │"
"│b                                     │"
"│c                                     │"
"└──────────────────────────────────────┘"
"↑↓ select · Enter open · q quit · ? help"
