tests/snapshots/tui__service_screen_error_state.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 6)"
---
"services                                "
"┌Services──────────────────────────────┐"
"│error: org.freedesktop.DBus.Error.Serv│"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ select · Enter open · q quit · ? help"
