tests/snapshots/tui__service_screen_loading_state.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 6)"
---
"┌Services (loading…)───────────────────┐"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ select · Enter open · q quit · ? help"
