tests/snapshots/tui__service_screen_renders_populated_list.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 60, 8)"
---
"                                                            "
"┌Services──────────────────────────────────────────────────┐"
"│org.busx.Test                            1234  dbus-daemon│"
"│org.busx.Other                                            │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · q quit · ? help                    "
